Fixed flicker blug with slider in chrome

--- a/includes/js/flexslider/flexslider.css
+++ b/includes/js/flexslider/flexslider.css
@@ -49,6 +49,13 @@
 .wcflexslider .slides > li {
   display: none;
   -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+.wcflexslider .slides > li.wcflex-active-slide {
+  -webkit-backface-visibility: visible;
+  -moz-backface-visibility: visible;
+  backface-visibility: visible;
 }
 .wcflexslider .slides img {
   /* width: 100%; */
